public/site.css
:root{
  --negative-four-pixel: min( calc(-4px + (-8 - -4) * ((100vw - 1280px) / (2560 - 1280))), -4px);
  --negative-two-pixel: min( calc(-2px + (-4 - -2) * ((100vw - 1280px) / (2560 - 1280))), -2px);
  --one-pixel: max( calc(1px + (2 - 1) * ((100vw - 1280px) / (2560 - 1280))), 1px);
  --two-pixel: max( calc(2px + (4 - 2) * ((100vw - 1280px) / (2560 - 1280))), 2px);
  --three-pixel: max( calc(3px + (6 - 3) * ((100vw - 1280px) / (2560 - 1280))), 3px);
  --four-pixel: max( calc(4px + (8 - 4) * ((100vw - 1280px) / (2560 - 1280))), 4px);
  --five-pixel: max( calc(5px + (10 - 5) * ((100vw - 1280px) / (2560 - 1280))), 5px);
  --six-pixel: max( calc(6px + (12 - 6) * ((100vw - 1280px) / (2560 - 1280))), 6px);
  --eight-pixel: max( calc(8px + (16 - 8) * ((100vw - 1280px) / (2560 - 1280))), 8px);
  --fourteen-pixel: max( calc(14px + (28 - 14) * ((100vw - 1280px) / (2560 - 1280))), 14px);
  --sixteen-pixel: max( calc(16px + (32 - 16) * ((100vw - 1280px) / (2560 - 1280))), 16px);
  --eighteen-pixel: max( calc(18px + (36 - 18) * ((100vw - 1280px) / (2560 - 1280))), 18px);
  --twenty-pixel: max( calc(20px + (40 - 20) * ((100vw - 1280px) / (2560 - 1280))), 20px);
  --twenty-four-pixel: max( calc(24px + (48 - 24) * ((100vw - 1280px) / (2560 - 1280))), 24px);
  --thirty-pixel: max( calc(30px + (60 - 30) * ((100vw - 1280px) / (2560 - 1280))), 30px);
  --thirty-two-pixel: max( calc(32px + (64 - 32) * ((100vw - 1280px) / (2560 - 1280))), 32px);
  --thirty-six-pixel: max( calc(36px + (72 - 36) * ((100vw - 1280px) / (2560 - 1280))), 36px);
  --forty-pixel: max( calc(40px + (80 - 40) * ((100vw - 1280px) / (2560 - 1280))), 40px);
  --forty-eight-pixel: max( calc(48px + (96 - 48) * ((100vw - 1280px) / (2560 - 1280))), 48px);
  --one-twenty-pixel: max( calc(120px + (240 - 120) * ((100vw - 1280px) / (2560 - 1280))), 120px);
  --one-fifty-pixel: max( calc(150px + (300 - 150) * ((100vw - 1280px) / (2560 - 1280))), 150px);
}

@font-face {
  font-family: 'Slider';
  src: url('Slider.eot');
  src: url('Slider.eot?#iefix') format('embedded-opentype'),
      url('Slider.woff2') format('woff2'),
      url('Slider.woff') format('woff'),
      url('Slider.ttf') format('truetype'),
      url('Slider.svg#Slider') format('svg');
  font-weight: 100;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Myriad Pro';
  font-style: normal;
  font-weight: normal;
  src: local('Myriad Pro'), url('MYRIADPRO-REGULAR.woff') format('woff');
}

body {
  font-family: "slider";
  font-size: var(--sixteen-pixel);
  margin: 0px var(--one-twenty-pixel);
  background-color: #222;
  color: #eee;
}

.mobileTitle {
  display: none;
}

.tinyFont {
  font-size: 12px;
}

.smallFont {
  font-size: 14px;
  font-size: var(--fourteen-pixel);
}

.mediumFont {
  font-size: 16px;
  font-size: var(--sixteen-pixel);
}

.largeFont {
  font-size: 18px;
  font-size: var(--eighteen-pixel);
  /* font-size: calc(12px + (40 - 12) * ((100vw - 900) / (2560 - 900))); */
}

.hugeFont {
  font-size: 20px;
  font-size: var(--twenty-pixel);
}

.extraLargeFont {
  font-size: 24px;
  font-size: var(--twenty-four-pixel);
}




button {
  all: unset;
  font-size: var(--eighteen-pixel);
  font-family: 'Myriad Pro';
  background-color: #333;
  color: #eee;
  padding: 3px 5px;
  padding: var(--three-pixel) var(--five-pixel);
  border-radius: var(--four-pixel);
  cursor: pointer;
  box-shadow: 0px 1px 4px black;
  box-shadow: 0px var(--one-pixel) var(--four-pixel) black;
  border: var(--one-pixel) solid #333;
}

button:hover {
  background-color: #444;
}

button:disabled {
  background-color: #222;
  color: #555;
  box-shadow: none;
  box-sizing: border-box;
  border: var(--one-pixel) solid #333;
  cursor: default;
}

button.faded {
  background-color: #222;
  color: #555;
  box-sizing: border-box;
  border: var(--one-pixel) solid #333;
}

button.selected {
  border: var(--one-pixel) solid #eee;
  background-color: #444;
  color: #fff;
}


input[type=text] {
  background-color: #333;
  color: #fff;
  box-sizing: border-box;
}

.leftSidebar {
  position: fixed;
  transform: rotate(-90deg);
  left: var(--twenty-four-pixel);
  width: 100vh;
  text-align: center;
  top: 100%;
  background-color: #333;
  color: #eee;
  box-shadow: 0px 0px var(--eight-pixel) var(--one-pixel) #111;
  padding-bottom: var(--fourteen-pixel);
  padding-top: var(--fourteen-pixel);
  font-size: var(--thirty-six-pixel);
  transform-origin: 0px 0px;
}

.rightSidebar {
  position: fixed;
  transform: rotate(90deg);
  right: var(--twenty-four-pixel);
  width: 100vh;
  text-align: center;
  top: 100%;
  background-color: #333;
  color: #eee;
  box-shadow: 0px 0px var(--eight-pixel) var(--one-pixel) #111;
  padding-bottom: var(--fourteen-pixel);
  padding-top: var(--fourteen-pixel);
  font-size: var(--thirty-six-pixel);
  transform-origin: 100% 0px;
}

@media only screen and (max-width: 900px) {
  .leftSidebar {
    display: none;
  }
  
  .rightSidebar {
    display: none;
  }
}

.myriadPro {
  font-family: "Myriad Pro";
}

.flexRow {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  gap: var(--eight-pixel);
}

.flexColumn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: var(--eight-pixel);
}

.tab {
  padding: 4px;
  height: 24px;
  font-size: 20px;
}

.tab.active {
  background-color: lightblue;
  color: #333;
  border-radius: 5px 5px 0px 0px;
}

.popupIcon {
  margin-left: var(--eight-pixel);
  font-size: var(--twenty-pixel);
  position: relative;
  cursor: pointer;
  z-index: inherit;
}

.arrowUp {
  width: 0; 
  height: 0; 
  border-left: var(--six-pixel) solid transparent;
  border-right: var(--six-pixel) solid transparent;

  border-bottom: var(--eight-pixel) solid #ddd;
  box-sizing: border-box;
  cursor: pointer;
}

.arrowDown {
  width: 0; 
  height: 0; 
  border-left: var(--six-pixel) solid transparent;
  border-right: var(--six-pixel) solid transparent;
  
  border-top: var(--eight-pixel) solid #ddd;
  box-sizing: border-box;
  cursor: pointer;
}

.hoverInfo {
  transform-origin: top left;
  position: absolute;
  transition: clip-path 200ms;
  box-sizing: border-box;
  clip-path: polygon(0% 0%, 0% 0%, 0% 0%, 0% 0%);
}

.hoverZoom {
  transition: transform 200ms;
  transform: scale(1);
}

.hoverInfo.up {
  clip-path: polygon(0% 101%, 0% 101%, 0% 101%, 0% 101%);
}

.hoverInfo.left {
  clip-path: polygon(101% 0%, 101% 0%, 101% 0%, 101% 0%);
}

.hoverInfo.up.left {
  clip-path: polygon(101% 101%, 101% 101%, 101% 101%, 101% 101%);
}

.hiddenButton {
  opacity: 0;
  transition: opacity 200ms;
}

.hoverParent {
  position: relative;
}

.hoverParent:hover {
  z-index: 1005;
}

/* .hoverParent.hover {
  z-index: 1005;
}

.hoverParent.hover > .hoverInfo {
  display: flex;
  position: absolute;
  z-index: 1000;
  clip-path: polygon(101% 101%, 0% 101%, 0% 0%, 101% 0%);
  clip-path: polygon(0% 0%, 0% 101%, 101% 101%, 101% 0%);
} */

.hoverZoom:hover {
  transform: scale(3);
  z-index: 1000;
}

.hoverParent:hover > .hoverInfo {
  display: flex;
  position: absolute;
  z-index: 1000;
  /* clip-path: polygon(101% 101%, 0% 101%, 0% 0%, 101% 0%); */
  clip-path: polygon(0% 0%, 0% 101%, 101% 101%, 101% 0%);
}

/* .hoverInfo:has(.hoverParent.hover) {
  clip-path: polygon(-1000% -1000%, -1000% 1000%, 1000% 1000%, 1000% -1000%);
} */

.hoverInfo:has(.hoverParent:hover) {
  clip-path: polygon(-1000% -1000%, -1000% 1000%, 1000% 1000%, 1000% -1000%);
}

.hoverInfo:has(.modal.shown) {
  clip-path: polygon(-1000% -1000%, -1000% 1000%, 1000% 1000%, 1000% -1000%);
}

.hiddenButtonParent:hover .hiddenButton {
  opacity: 1;
}

/* .hoverInfo.right {
  left: 100%;
  margin-left: 16px;
  height: 0px;
  max-width: 240px;
}

.hoverInfo.left {
  right: 100%;
  margin-right: 16px;
  height: 0px;
} */

.fade-enter {
  opacity: 0;
}
.fade-enter-active {
  opacity: 1;
}
.fade-exit {
  opacity: 1;
}
.fade-exit-active {
  opacity: 0;
}
.fade-enter-active,
.fade-exit-active {
  transition: opacity 300ms;
}

.modal-enter {
  opacity: 0;
  transform: scale(0.9);
}
.modal-enter-active {
  opacity: 1;
  transform: scale(1);
  transition: opacity 300ms, transform 500ms;
}
.modal-exit {
  opacity: 1;
  transform: scale(1);
}
.modal-exit-active {
  opacity: 0;
  transform: scale(0.9);
  transition: opacity 300ms, transform 500ms;
}

.grow-enter {
  transform: scaleY(0);
  transform-origin: top;
}
.grow-enter-active {
  transform: scaleY(1);
  transform-origin: top;
  transition: transform 500ms;
}
.grow-exit {
  transform: scaleY(1);
  transform-origin: top;
}
.grow-exit-active {
  transform: scaleY(0);
  transform-origin: top;
  transition: transform 500ms;
}

.mobileOnly {
  display: none;
}

.nonMobile {
  display: flex;
}

.leftLabel {
  position: absolute;
  white-space: nowrap;
  left: var(--six-pixel);
  top: var(--negative-two-pixel);
  background-color: #222;
  border-radius: var(--five-pixel);
  padding: var(--two-pixel) var(--four-pixel);
}
.centerLabel {
  position: absolute;
  white-space: nowrap;
  top: var(--negative-two-pixel);
  background-color: #222;
  border-radius: var(--five-pixel);
  padding: var(--two-pixel) var(--four-pixel);
}

@media only screen and (max-width: 900px) {
  body {
    margin: 0px 8px;
  }

  .mobileOnly {
    display: flex;
  }

  .hiddenButton {
    opacity: 1;
    transition: opacity 200ms;
  }

  .nonMobile {
    display: none;
  }

  .mobileTitle {
    display: flex;
    margin: 20px 0px;
    font-size: 24px;
    text-align: center;
  }

  .leftLabel {
    top: var(--negative-four-pixel);
  }
  .centerLabel {
    top: var(--negative-two-pixel);
  }
}

